--- a/controles/cis/13/index.html
+++ b/controles/cis/13/index.html
@@ -99,15 +99,17 @@
   <span class="etiqueta">🧪 Validación cruzada:</span>
   
     
-    <div class="bloque">
+<div class="bloque">
   <span class="etiqueta">🧪 Validación cruzada:</span>
   <div class="respuesta" style="font-family: 'Comic Sans MS'; font-size: 10pt;">
-    ✔️ <strong>CIS Control 13:</strong> 
-    <a href="/el-pergamino-digital/controles/cis/13/">Protección de Datos</a><br>
+    ✔️ <strong>NIST SP 800-53 Rev. 5:</strong> 
+    <a href="/el-pergamino-digital/controles/nist/sc-12/">SC-12</a>, 
+    <a href="/el-pergamino-digital/controles/nist/sc-28/">SC-28</a>, 
+    <a href="/el-pergamino-digital/controles/nist/sc-28(1)/">SC-28(1)</a><br>
     ✔️ <strong>ISO/IEC 27002:2022:</strong> 10.1 (Cifrado), 10.2 (Gestión de claves)<br>
     ✔️ <strong>OWASP Top 10:</strong> A02 – Cryptographic Failures<br>
-    ✔️ <strong>ENS:</strong> MP.SI.1<br>
-    ✔️ <strong>PCI DSS v4.0:</strong> Requisitos 3.5.1, 3.6.1
+    ✔️ <strong>ENS:</strong> MP.IO.1, MP.SI.1<br>
+    ✔️ <strong>PCI DSS v4.0:</strong> Requisitos 3.5, 3.6
   </div>
 </div>
 
