--- a/controles/cis/13/index.html
+++ b/controles/cis/13/index.html
@@ -99,20 +99,17 @@
   <span class="etiqueta">🧪 Validación cruzada:</span>
   <div class="respuesta" style="font-family: 'Comic Sans MS'; font-size: 10pt;">
     ✔️ <strong>NIST SP 800-53 Rev. 5:</strong> 
-    <a href="https://csrc.nist.gov/pubs/sp/800/53/r5/upd1/final" target="_blank">SC-12</a>, 
-    <a href="https://csrc.nist.gov/pubs/sp/800/53/r5/upd1/final" target="_blank">SC-28</a>, 
-    <a href="https://csrc.nist.gov/pubs/sp/800/53/r5/upd1/final" target="_blank">SC-28(1)</a><br>
+    <a href="https://csrc.nist.gov/pubs/sp/800/53/r5/upd1/final" target="_blank">SC-12, SC-28, SC-28(1)</a><br>
     ✔️ <strong>ISO/IEC 27002:2022:</strong> 
-    <a href="https://www.iso.org/standard/27002.html" target="_blank">10.1 (Cifrado)</a>, 
-    <a href="https://www.iso.org/standard/27002.html" target="_blank">10.2 (Gestión de claves)</a><br>
+    <a href="https://www.iso.org/standard/27002.html" target="_blank">10.1 (Cifrado), 10.2 (Gestión de claves)</a><br>
     ✔️ <strong>OWASP Top 10:</strong> 
     <a href="https://owasp.org/Top10/A02_2021-Cryptographic_Failures/" target="_blank">A02 – Cryptographic Failures</a><br>
     ✔️ <strong>ENS:</strong> 
-    <a href="https://www.ccn-cert.cni.es/publico/seriesCCN-STIC/series/800-Esquema_Nacional_de_Seguridad/825/825-27001_ENS.pdf" target="_blank">MP.IO.1</a>, 
-    <a href="https://www.ccn-cert.cni.es/publico/seriesCCN-STIC/series/800-Esquema_Nacional_de_Seguridad/825/825-27001_ENS.pdf" target="_blank">MP.SI.1</a><br>
+    <a href="https://www.ccn-cert.cni.es/publico/seriesCCN-STIC/series/800-Esquema_Nacional_de_Seguridad/825/825-27001_ENS.pdf" target="_blank">MP.IO.1, MP.SI.1</a><br>
     ✔️ <strong>PCI DSS v4.0:</strong> 
-    <a href="https://listings.pcisecuritystandards.org/documents/PCI-DSS-v4_0-LA.pdf" target="_blank">Requisitos 3.5</a>, 
-    <a href="https://listings.pcisecuritystandards.org/documents/PCI-DSS-v4_0-LA.pdf" target="_blank">3.6</a>
+    <a href="https://listings.pcisecuritystandards.org/documents/PCI-DSS-v4_0-LA.pdf" target="_blank">Requisitos 3.5, 3.6</a><br>
+    ✔️ <strong>CIS Control 13.1:</strong> 
+    <a href="https://www.cisecurity.org/controls/monitor-and-record-network-traffic" target="_blank">Monitorización del tráfico de red</a>
   </div>
 </div>
 
