--- a/controles/cis/13/index.html
+++ b/controles/cis/13/index.html
@@ -109,7 +109,11 @@
     ✔️ <strong>PCI DSS v4.0:</strong> 
     <a href="https://listings.pcisecuritystandards.org/documents/PCI-DSS-v4_0-LA.pdf" target="_blank">Requisitos 3.5, 3.6</a><br>
     ✔️ <strong>CIS Control 13.1:</strong> 
-    <a href="https://www.cisecurity.org/controls/network-monitoring-and-defense" target="_blank">
+    <a href="https://cas.docs.cisecurity.org/en/latest/source/Controls13/#131-monitor-and-record-network-traffic" target="_blank">
+      CIS Control 13.1 – Monitor and Record Network Traffic
+</a>
+
+
   </div>
 </div>
 
