--- a/mitre/t1040/index.html
+++ b/mitre/t1040/index.html
@@ -70,6 +70,15 @@
     .breadcrumb a:hover {
       text-decoration: underline;
     }
+
+    footer {
+      margin-top: 4rem;
+      padding-top: 1rem;
+      border-top: 1px solid #ccc;
+      font-size: 0.9rem;
+      color: #666;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -118,7 +127,6 @@
     <span class="etiqueta">📚 Referencia normativa:</span>
     <div class="respuesta" style="font-family: 'Comic Sans MS'; font-size: 10pt;">
       <a href="https://attack.mitre.org/techniques/T1040/" class="enlace-normativo" target="_blank">MITRE ATT&CK – T1040: Network Sniffing</a><br>
-      <a href="https://cas.docs.cisecurity.org/en/latest/source/Controls13/#131-monitor-and-record-network-traffic" class="enlace-normativo" target="_blank">CIS Control 13.1 – Monitorización del tráfico de red</a><br>
       <a href="https://owasp.org/www-project-web-security-testing-guide/v41/4-Web_Application_Security_Testing/07-Input_Validation_Testing/01-Testing_for_Reflected_Cross_Site_Scripting" class="enlace-normativo" target="_blank">OWASP WSTG-INPV-01 – Validación de entrada en protocolos inseguros</a>
     </div>
   </div>
@@ -134,7 +142,6 @@
     <span class="etiqueta">🧪 Validación cruzada:</span>
     <div class="respuesta" style="font-family: 'Comic Sans MS'; font-size: 10pt;">
       ✔️ <strong>NIST SP 800-53 Rev. 5:</strong> <a href="https://csrc.nist.gov/pubs/sp/800/53/r5/upd1/final" class="enlace-normativo" target="_blank">SC-7(3), AC-17(2)</a><br>
-      ✔️ <strong>CIS Control 13.1:</strong> <a href="https://cas.docs.cisecurity.org/en/latest/source/Controls13/#131-monitor-and-record-network-traffic" class="enlace-normativo" target="_blank">Monitorización del tráfico de red</a><br>
       ✔️ <strong>OWASP WSTG:</strong> <a href="https://owasp.org/www-project-web-security-testing-guide/v41/4-Web_Application_Security_Testing/07-Input_Validation_Testing/01-Testing_for_Reflected_Cross_Site_Scripting" class="enlace-normativo" target="_blank">WSTG-INPV-01</a>
     </div>
   </div>
@@ -145,6 +152,10 @@
       “Escuchar el tráfico de red sin permiso es como colocar un micrófono oculto en una sala de reuniones: no interrumpes la conversación, pero capturas todo lo que importa.”
     </div>
   </div>
+
+  <footer>
+    Esta ficha forma parte de <strong>El Pergamino Digital</strong> · Legado técnico, pedagógico y doctrinal
+  </footer>
 
 </body>
 </html>
