--- a/labs/index.html
+++ b/labs/index.html
@@ -81,12 +81,15 @@
   </div>
 
   <div class="bloque">
-    <span class="etiqueta">📂 Laboratorio destacado:</span>
+    <span class="etiqueta">📂 Laboratorios disponibles:</span>
     <div class="respuesta">
-      <strong>Sniffing de red con Wireshark y tcpdump</strong><br>
-      Técnica MITRE: <a href="https://juliocesarabreup.github.io/el-pergamino-digital/mitre/t1040/" class="enlace-normativo">T1040 – Network Sniffing</a><br>
-      Control CIS: <a href="https://juliocesarabreup.github.io/el-pergamino-digital/controles/cis/13/" class="enlace-normativo">CIS Control 13.1 – Monitorización del tráfico de red</a><br>
-      Prueba OWASP: <a href="https://owasp.org/www-project-web-security-testing-guide/v41/4-Web_Application_Security_Testing/07-Input_Validation_Testing/01-Testing_for_Reflected_Cross_Site_Scripting" class="enlace-normativo" target="_blank">OWASP WSTG-INPV-01 – Testing for Reflected Cross Site Scripting (XSS)</a>
+      <ul>
+        <li>
+          <a href="/el-pergamino-digital/labs/sniffing/" class="enlace-normativo">
+            Sniffing de red con Wireshark y tcpdump
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 
