--- a/labs/index.html
+++ b/labs/index.html
@@ -71,26 +71,41 @@
 </head>
 <body>
 
-  <h1 class="titulo-principal">🧪 Laboratorios técnicos</h1>
+  <h1 class="titulo-principal">🧪 Laboratorios doctrinales</h1>
 
   <div class="bloque">
-    <span class="etiqueta">📂 Acceso al índice doctrinal:</span>
+    <span class="etiqueta">🎯 Propósito:</span>
     <div class="respuesta">
-      <a href="/el-pergamino-digital/labs01/index.html" class="enlace-normativo">
-        Ir al nuevo índice de laboratorios (labs01)
-      </a>
+      Esta sección reúne laboratorios técnicos diseñados para reforzar habilidades prácticas en ciberseguridad, con trazabilidad normativa y validación cruzada. Cada laboratorio incluye objetivos, herramientas, procedimientos, evidencias y enlaces a normas oficiales dentro de su propia ficha.
     </div>
   </div>
 
   <div class="bloque">
-    <span class="etiqueta">⚠️ Aviso:</span>
+    <span class="etiqueta">📂 Laboratorios disponibles:</span>
     <div class="respuesta">
-      Esta página ha sido reemplazada por una nueva estructura. Todos los laboratorios han sido migrados a <strong>labs01</strong> con trazabilidad mejorada y formato doctrinal unificado.
+      <ul>
+        <li>
+          <a href="/el-pergamino-digital/labs01/labs01/" class="enlace-normativo">
+            Lab 01 – Monitorización de tráfico con Wireshark y tcpdump
+          </a>
+        </li>
+        <li><a href="/el-pergamino-digital/labs01/lab02/" class="enlace-normativo">Lab 02 – Título pendiente</a></li>
+        <li><a href="/el-pergamino-digital/labs01/lab03/" class="enlace-normativo">Lab 03 – Título pendiente</a></li>
+        <!-- ...hasta lab100 -->
+        <li><a href="/el-pergamino-digital/labs01/lab100/" class="enlace-normativo">Lab 100 – Título pendiente</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="bloque">
+    <span class="etiqueta">⚠️ Disclaimer doctrinal:</span>
+    <div class="respuesta">
+      Todos los laboratorios aquí presentados tienen fines exclusivamente educativos y están diseñados para ser ejecutados en entornos controlados, simulados o autorizados. El Pergamino Digital no promueve ni avala el uso indebido de técnicas ofensivas fuera del marco ético, legal y pedagógico. La responsabilidad del uso de este conocimiento recae en quien lo aplica.
     </div>
   </div>
 
   <footer>
-    Esta sección forma parte de <strong>El Pergamino Digital</strong> · Transición hacia una arquitectura de laboratorios certificables
+    Esta sección forma parte de <strong>El Pergamino Digital</strong> · Laboratorios técnicos con trazabilidad normativa y propósito pedagógico
   </footer>
 
 </body>
