--- a/labs/index.html
+++ b/labs/index.html
@@ -91,6 +91,8 @@
         </li>
         <li><a href="/el-pergamino-digital/labs/labs02/" class="enlace-normativo">Lab 02 – Descubrimiento de red y fingerprinting con Nmap</a></li>
         <li><a href="/el-pergamino-digital/labs/labs03/" class="enlace-normativo">Lab 03 – Análisis de cabeceras HTTP y exposición de metadatos</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs04/" class="enlace-normativo">Lab 03 – Captura de credenciales en protocolos inseguros (FTP, Telnet, HTTP)</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs05/" class="enlace-normativo">Lab 03 – Análisis de cabeceras HTTP y exposición de metadatos</a></li>
         <!-- ...hasta lab100 -->
         <li><a href="/el-pergamino-digital/labs01/lab100/" class="enlace-normativo">Lab 100 – Título pendiente</a></li>
       </ul>
