--- a/labs/index.html
+++ b/labs/index.html
@@ -2,113 +2,56 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Laboratorios técnicos | El Pergamino Digital</title>
+  <title>El Pergamino Digital · Portada doctrinal</title>
   <link rel="stylesheet" href="/el-pergamino-digital/estilos.css">
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #ffffff;
-      color: #1a1a1a;
-      margin: 2rem auto;
-      max-width: 960px;
-      line-height: 1.7;
-      font-size: 1.05rem;
-    }
-
-    .titulo-principal {
-      font-size: 2.4rem;
-      color: #003366;
-      border-bottom: 3px solid #0078d4;
-      padding-bottom: 0.4rem;
-      margin-bottom: 2.5rem;
-    }
-
-    .bloque {
-      background-color: #f4faff;
-      border-left: 6px solid #0078d4;
-      border-radius: 6px;
-      padding: 1.2rem 1.5rem;
-      margin-bottom: 2.2rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.04);
-    }
-
-    .etiqueta {
-      font-weight: 600;
-      color: #0078d4;
-      font-size: 1.15rem;
-      display: block;
-      margin-bottom: 0.6rem;
-    }
-
-    .respuesta {
-      font-size: 1.05rem;
-    }
-
-    .respuesta ul {
-      margin-top: 0.5rem;
-      padding-left: 1.4rem;
-    }
-
-    .enlace-normativo {
-      color: #005a9e;
-      text-decoration: none;
-      border-bottom: 1px dotted #005a9e;
-    }
-
-    .enlace-normativo:hover {
-      text-decoration: underline;
-    }
-
-    footer {
-      margin-top: 4rem;
-      padding-top: 1rem;
-      border-top: 1px solid #ccc;
-      font-size: 0.9rem;
-      color: #666;
-      text-align: center;
-    }
-  </style>
 </head>
 <body>
 
-  <h1 class="titulo-principal">🧪 Laboratorios doctrinales</h1>
+  <h1 class="titulo-principal">📜 El Pergamino Digital</h1>
 
   <div class="bloque">
-    <span class="etiqueta">🎯 Propósito:</span>
+    <span class="etiqueta">🎯 Propósito del repositorio:</span>
     <div class="respuesta">
-      Esta sección reúne laboratorios técnicos diseñados para reforzar habilidades prácticas en ciberseguridad, con trazabilidad normativa y validación cruzada. Cada laboratorio incluye objetivos, herramientas, procedimientos, evidencias y enlaces a normas oficiales dentro de su propia ficha.
+      Este espacio recopila laboratorios técnicos, glosarios, fichas doctrinales y simuladores de progresión certificadora en ciberseguridad. Cada recurso está alineado con marcos internacionales (CIS, NIST, MITRE, OWASP) y diseñado para ser replicable, trazable y pedagógico.
     </div>
   </div>
 
   <div class="bloque">
-    <span class="etiqueta">📂 Laboratorios disponibles:</span>
+    <span class="etiqueta">🧪 Laboratorios técnicos:</span>
     <div class="respuesta">
       <ul>
-        <li>
-          <a href="/el-pergamino-digital/labs/labs01/" class="enlace-normativo">
-            Lab 01 – Monitorización de tráfico con Wireshark y tcpdump
-          </a>
-        </li>
-        <li><a href="/el-pergamino-digital/labs/labs02/" class="enlace-normativo">Lab 02 – Descubrimiento de red y fingerprinting con Nmap</a></li>
-        <li><a href="/el-pergamino-digital/labs/labs03/" class="enlace-normativo">Lab 03 – Análisis de cabeceras HTTP y exposición de metadatos</a></li>
-        <li><a href="/el-pergamino-digital/labs/labs04/" class="enlace-normativo">Lab 04 – Captura de credenciales en protocolos inseguros (FTP, Telnet, HTTP)</a></li>
-        <li><a href="/el-pergamino-digital/labs/labs05/" class="enlace-normativo">Lab 05 – Escaneo de vulnerabilidades con OpenVAS
-</a></li>
-        <!-- ...hasta lab100 -->
-        <li><a href="/el-pergamino-digital/labs01/lab100/" class="enlace-normativo">Lab 100 – Título pendiente</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs01/">Lab 01 – Reconocimiento pasivo con WHOIS y DNS</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs02/">Lab 02 – Descubrimiento de red con Nmap</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs03/">Lab 03 – Análisis de cabeceras HTTP</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs04/">Lab 04 – Captura de credenciales en protocolos inseguros</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs05/">Lab 05 – Escaneo de vulnerabilidades con OpenVAS</a></li>
       </ul>
     </div>
   </div>
 
   <div class="bloque">
-    <span class="etiqueta">⚠️ Disclaimer doctrinal:</span>
+    <span class="etiqueta">📚 Glosario técnico-aforístico:</span>
     <div class="respuesta">
-      Todos los laboratorios aquí presentados tienen fines exclusivamente educativos y están diseñados para ser ejecutados en entornos controlados, simulados o autorizados. El Pergamino Digital no promueve ni avala el uso indebido de técnicas ofensivas fuera del marco ético, legal y pedagógico. La responsabilidad del uso de este conocimiento recae en quien lo aplica.
+      <a href="/el-pergamino-digital/glosario/">Ver definiciones, aforismos y analogías técnicas</a>
+    </div>
+  </div>
+
+  <div class="bloque">
+    <span class="etiqueta">🎓 Simulador certificador:</span>
+    <div class="respuesta">
+      <a href="/el-pergamino-digital/simulador/">Acceder al banco de preguntas y progresión modular</a>
+    </div>
+  </div>
+
+  <div class="bloque">
+    <span class="etiqueta">🧭 Módulos de formación:</span>
+    <div class="respuesta">
+      <a href="/el-pergamino-digital/modulos/">Ver estructura modular y niveles de dificultad</a>
     </div>
   </div>
 
   <footer>
-    Esta sección forma parte de <strong>El Pergamino Digital</strong> · Laboratorios técnicos con trazabilidad normativa y propósito pedagógico
+    Esta portada forma parte de <strong>El Pergamino Digital</strong> · Proyecto doctrinal, técnico y pedagógico de Julio César Abreu.
   </footer>
 
 </body>
