--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="/el-pergamino-digital/">Inicio</a>
         <a href="/el-pergamino-digital/controles/">Controles CIS</a>
         <a href="/el-pergamino-digital/glosario/">Glosario</a>
-        <a href="/el-pergamino-digital/labs/idex.html">Laboratorios</a>
+        <a href="/el-pergamino-digital/labs/">Laboratorios</a>
         <a href="/el-pergamino-digital/sobre/">Sobre el proyecto</a>
     </nav>
 </header>
