--- a/labs/index.html
+++ b/labs/index.html
@@ -20,11 +20,11 @@
     <span class="etiqueta">🧪 Laboratorios técnicos:</span>
     <div class="respuesta">
       <ul>
-        <li><a href="/el-pergamino-digital/labs/labs01/">Lab 01 – Reconocimiento pasivo con WHOIS y DNS</a></li>
-        <li><a href="/el-pergamino-digital/labs/labs02/">Lab 02 – Descubrimiento de red con Nmap</a></li>
-        <li><a href="/el-pergamino-digital/labs/labs03/">Lab 03 – Análisis de cabeceras HTTP</a></li>
-        <li><a href="/el-pergamino-digital/labs/labs04/">Lab 04 – Captura de credenciales en protocolos inseguros</a></li>
-        <li><a href="/el-pergamino-digital/labs/labs05/">Lab 05 – Escaneo de vulnerabilidades con OpenVAS</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs01/">Lab 01 – Monitorización de tráfico con Wireshark y tcpdump</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs02/">Lab 02 – Descubrimiento de red y fingerprinting con Nmap</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs03/">Lab 03 – Análisis de cabeceras HTTP y exposición de metadatos</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs04/">Lab 04 – Captura de credenciales en protocolos inseguros (FTP, Telnet, HTTP)</a></li>
+        <li><a href="/el-pergamino-digital/labs/labs05/">Lab 05 – Escaneo de vulnerabilidades con OpenVAS y análisis de resultados</a></li>
       </ul>
     </div>
   </div>
